# hireflow-ai

./: .env.example  .gitignore  README.md  SECURITY.md  app.py  database.py  demo_screenshots.py  embedder.py  explainer.py  hireflow_cli.py  interview_gen.py  parser.py  pyproject.toml  requirements.txt  run.bat  schema.sql  scorer.py  setup.bat  skills_local.py  supabase_client.py  supabase_schema.sql  take_screenshots.py  utils.py
.streamlit/: config.toml
